--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,25 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
- 
-  </head>
-  <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.min.css" />
-  <title>Philanthropye</title>
-</head>
-
-
-
-  <body>
-
-    <header class="page-header">
+<header class="page-header">
   <div class="header-wrapper container">
     <nav class="main-nav">
       <a href="./index.html" class="logo link">
         <svg class="logo-icon">
-          <use href="img/icons.svg#logo"></use>
+          <use href="@img/icons.svg#logo"></use>
         </svg>
         <p>Philanthropy X</p>
       </a>
@@ -38,15 +22,3 @@
     <button class="header-btn_donate">Donate now</button>
   </div>
 </header>
-
-
-    <main>
-
-    </main>
-
-
-    <footer></footer>
-
-
-   <script src="js/app.min.js"></script>
-</html>
