add 1/2 path of mrkp

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -19,6 +19,6 @@
         </li>
       </ul>
     </nav>
-    <button class="header-btn_donate">Donate now</button>
+    <button class="main-button" type="button">Donate now</button>
   </div>
 </header>
