--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,49 @@
-<footer></footer>
+<footer class="footer">
+  <div class="footer__wrapper container">
+    <div class="footer__logo">
+      <a href="./index.html" class="logo link">
+        <svg class="logo-icon">
+          <use href="@img/icons.svg#logo"></use>
+        </svg>
+        <p>Philanthropy X</p>
+      </a>
+
+      <p class="footer__info">
+        Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam mauris.
+      </p>
+    </div>
+    <div class="footer__menu">
+      <ul class="footer__list list">
+        <li class="footer__list_item">
+          <a href="" class="footer__list_link link">Home</a>
+        </li>
+        <li class="footer__list_item">
+          <a href="" class="footer__list_link link">About</a>
+        </li>
+        <li class="footer__list_item">
+          <a href="" class="footer__list_link link">Blog</a>
+        </li>
+        <li class="footer__list_item">
+          <a href="" class="footer__list_link link">Blog post</a>
+        </li>
+        <li class="footer__list_item">
+          <a href="" class="footer__list_link link">Donate</a>
+        </li>
+        <li class="footer__list_item">
+          <a href="" class="footer__list_link link">Donate single</a>
+        </li>
+        <li class="footer__list_item">
+          <a href="" class="footer__list_link link">Contact</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__action">
+      <h2 class="footer__action_title">
+        Join us and let’s make a better world, today
+      </h2>
+
+      <button class="main-button" type="button">Donate now</button>
+      <a href="" class="secondary-button link">More ways to help</a>
+    </div>
+  </div>
+</footer>
