--- a/src/html/header.html
+++ b/src/html/header.html
@@ -19,6 +19,43 @@
         </li>
       </ul>
     </nav>
+    <button type="button" class="burger-menu" data-menu-button>
+      <svg class="burger-icon">
+        <use href="@img/icons.svg#menu"></use>
+      </svg>
+    </button>
     <button class="main-button" type="button">Donate now</button>
+  </div>
+
+  <div class="mobile-menu" data-menu>
+    <button type="button" class="burger-btn_close" data-menu-close>
+      <svg class="burger-btn__close-icon">
+        <use href="@img/icons.svg#close"></use>
+      </svg>
+    </button>
+    <a href="./index.html" class="logo link">
+      <svg class="logo-icon">
+        <use href="@img/icons.svg#logo"></use>
+      </svg>
+      <p>Philanthropy X</p>
+    </a>
+
+    <ul class="mobile-navigation__list list">
+      <li class="mobile-navigation__item">
+        <a
+          href="./index.html"
+          class="mobile-navigation__link link mobile-current"
+          >Home</a
+        >
+      </li>
+      <li class="mobile-navigation__item">
+        <a href="" class="mobile-navigation__link link" target="_blank"
+          >About</a
+        >
+      </li>
+      <li class="mobile-navigation__item">
+        <a href="" class="mobile-navigation__link link">Pages</a>
+      </li>
+    </ul>
   </div>
 </header>
