--- a/src/html/results.html
+++ b/src/html/results.html
@@ -62,7 +62,7 @@
           srcset="@img/boy.jpg 1x, @img/boy2x.jpg 2x"
           media="(min-width: 480px)"
         />
-        <img class="team__img" src="@img/boy.jpg" alt="Портрет сотрудника" />
+        <img class="team__img" src="@img/boy.jpg" alt="Portrait of a boy" />
       </picture>
     </div>
   </div>
