--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
- 
-  </head>
   @@include('html/head.html',{ "titl":"Philanthropy" })
 
-
   <body>
-
     @@include('html/header.html',{})
 
     <main>
-    @@include('html/hero.html',{})
-    @@include('html/stats.html',{})
-    @@include('html/about.html',{}) 
-    @@include('html/results.html',{})
-    @@include('html/media.html',{})
-    @@include('html/help.html',{})
-    @@include('html/action.html',{})
-
-
-    </main>
-
+      @@include('html/hero.html',{}) @@include('html/stats.html',{})
+     @@include('html/about.html',{})    
+      @@include('html/results.html',{})
+      @@include('html/media.html',{}) 
+      @@include('html/help.html',{})
+      @@include('html/action.html',{}) 
+      @@include('html/testimonials.html',{})
+      @@include('html/news.html',{})  
 
     @@include('html/footer.html',{})
 
-   <script src="js/app.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="js/app.min.js"></script>
+  </body>
 </html>
