--- a/src/html/testimonials.html
+++ b/src/html/testimonials.html
@@ -4,14 +4,13 @@
       <picture class="testimonials__img">
         <source
           srcset="@img/amara.webp 1x, @img/amara2x.webp 2x"
-          media="(min-width: 480px)"
           type="image/webp"
         />
         <source
           srcset="@img/amara.jpg 1x, @img/amara2x.jpg 2x"
-          media="(min-width: 480px)"
+          type="image/jpg"
         />
-        <img class="team__img" src="@img/amara.jpg" alt="Портрет сотрудника" />
+        <img src="@img/amara.jpg" alt="Photos of girls" />
       </picture>
 
       <div class="testimonials__article">
