--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     @@include('html/header.html',{})
 
     <main>
-      @@include('html/hero.html',{}) @@include('html/stats.html',{})
-     @@include('html/about.html',{})    
+      @@include('html/hero.html',{}) 
+      @@include('html/stats.html',{}) 
+      @@include('html/about.html',{})    
       @@include('html/results.html',{})
       @@include('html/media.html',{}) 
       @@include('html/help.html',{})
