--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -9,9 +9,14 @@
 
     <a href="" class="secondary-button link">About our charity</a>
   </div>
-  <picture class="hero-img">
-    <source srcset="@img/hero.webp 1x, @img/hero2x.webp 2x" type="image/webp" />
-    <source srcset="@img/hero.jpg 1x, @img/hero2x.jpg 2x" />
-    <img class="" src="@img/hero.jpg" alt="фотографія з дітьми" />
-  </picture>
+  <div class="hero-overlay">
+    <picture class="hero-img">
+      <source
+        srcset="@img/hero.webp 1x, @img/hero2x.webp 2x"
+        type="image/webp"
+      />
+      <source srcset="@img/hero.jpg 1x, @img/hero2x.jpg 2x" />
+      <img class="" src="@img/hero.jpg" alt="фотографія з дітьми" />
+    </picture>
+  </div>
 </section>
