--- a/src/html/news.html
+++ b/src/html/news.html
@@ -23,7 +23,7 @@
         </div>
       </li>
       <li class="news__item slider__item">
-        <img class="news__img" src="@img/vegetables.jpg" alt="" />
+        <!-- <img class="news__img" src="@img/vegetables.jpg" alt="" /> -->
 
         <picture class="news__img">
           <source
@@ -63,7 +63,7 @@
         </div>
       </li>
       <li class="news__item slider__item">
-        <img class="news__img" src="@img/vegetables.jpg" alt="" />
+        <!-- <img class="news__img" src="@img/vegetables.jpg" alt="" /> -->
 
         <picture class="news__img">
           <source
