--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include('html/head.html',{ "titl":"Philanthropy" })
+  @@include('html/head.html',{ "title":"Philanthropy" })
 
   <body>
     @@include('html/header.html',{})
